# web3givewell

./: .gitignore  README.md  auditors.txt  rust_practices.json  vercel.json
contracts/: Cargo.toml
contracts/asset-hub-extension/: Cargo.toml
contracts/asset-hub-extension/src/: lib.rs
contracts/audit-bounty-manager/: Cargo.toml
contracts/audit-bounty-manager/src/: lib.rs
contracts/auditor-registry/: Cargo.toml
contracts/auditor-registry-v2/: Cargo.toml
contracts/auditor-registry-v2/src/: lib.rs
contracts/auditor-registry/src/: lib.rs
contracts/dispute-manager/: Cargo.toml
contracts/dispute-manager/src/: lib.rs
contracts/escrow-manager/: Cargo.toml
contracts/escrow-manager/src/: lib.rs
contracts/governance-manager/: Cargo.toml
contracts/governance-manager/src/: lib.rs
contracts/insurance-fund/: Cargo.toml
contracts/insurance-fund/src/: lib.rs
contracts/npo-registry/: Cargo.toml
contracts/npo-registry-with-extension/: Cargo.toml
contracts/npo-registry-with-extension/src/: lib.rs
contracts/npo-registry/src/: lib.rs
contracts/simplified-auditor/: Cargo.toml
contracts/simplified-auditor/src/: lib.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/auditor/add-funds/: page.tsx
frontend/app/auditor/dashboard/: page.tsx
frontend/app/components/: GovernanceTokens.tsx
frontend/app/dashboard/: governance-section.tsx  page.tsx
frontend/app/dashboard/npo/: page.tsx
frontend/app/donor/add-funds/: page.tsx
frontend/app/donor/dashboard/: page.tsx
frontend/app/governance/: page.tsx
frontend/app/login/: page.tsx
frontend/app/npo/add-funds/: page.tsx
frontend/app/npo/dashboard/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/select-role/: page.tsx
frontend/app/services/: asset-hub-service.ts  npo-governance-service.ts
frontend/app/signup/: page.tsx
frontend/app/test-asset-hub/: page.tsx
frontend/components/about/: team-member.tsx
frontend/components/auth/: RoleRedirectHandler.tsx
frontend/components/dashboard/: performance-metrics.tsx
frontend/components/layout/: footer.tsx  header.tsx  page-layout.tsx
frontend/components/npo/: create-milestone-form.tsx
frontend/components/projects/: donation-modal.tsx  nonprofit-card.tsx  projects-filter.tsx
frontend/components/ui/: button.tsx  use-toast.ts
frontend/components/wallet/: add-funds.tsx  connect-wallet-button.tsx
frontend/lib/: api.ts
frontend/lib/auth/: auth-provider.tsx
frontend/lib/wallet/: WalletProvider.tsx
