[workspace]
members = [
    "auditor-registry",
    "audit-bounty-manager",
    "dispute-manager",
    "escrow-manager",
    "governance-manager",
    "insurance-fund",
    "simplified-auditor",
]

[workspace.package]
version = "0.1.0"
authors = ["ImpactChain Team"]
edition = "2021"

[workspace.dependencies]
ink = { version = "4.2.0", default-features = false }

ink_primitives = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.6.0", default-features = false, features = ["derive"] }

# These dependencies
openbrush = { git = "https://github.com/Supercolony-net/openbrush-contracts", tag = "v2.3.0", default-features = false, features = ["psp22", "access_control", "pausable", "reentrancy_guard"] }

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = true
opt-level = 3
lto = true