[package]
name = "npo-registry-with-extension"
version = "0.1.0"
authors = ["ImpactChain Team"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_primitives = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.6.0", default-features = false, features = ["derive"] }
asset_hub_extension = { path = "../asset-hub-extension", default-features = false }

[lib]
name = "npo_registry_with_extension"
path = "src/lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ink_primitives/std",
    "asset_hub_extension/std",
]
ink-as-dependency = []
